table api and fix check customer phone
